package HomeWork3.view;

public interface IView {
    void run();
}